XIVY-16149 Improve styling - Make Label of Dialog-Components visible - Do not show Dialog in preview-mode - Ensure gap is the same for every component with label

--- a/packages/editor/src/components/blocks/radio/Radio.css
+++ b/packages/editor/src/components/blocks/radio/Radio.css
@@ -1,7 +1,7 @@
 .block-radio {
   display: flex;
   flex-direction: column;
-  gap: var(--size-2);
+  gap: var(--size-1);
 }
 .block-radio__items:empty {
   display: none;
